Implemented Mockito testing for unit and instrumented tests